# clio

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  definition.md  docker-compose.yml
.github/workflows/: release.yml
migrations/: 001_init.sql  002_deep.sql  003_embeddings.sql  004_telegram.sql  005_social.sql  006_feeds.sql  007_blocklist.sql  008_fail_counts.sql
scripts/: release.sh
src/: api.rs  cli.rs  config.rs  db.rs  deep.rs  embed.rs  error.rs  feeds.rs  flaresolverr.rs  llm.rs  main.rs  models.rs  normalize.rs  pipeline.rs  queue.rs  service.rs  social.rs  telegram.rs  webgen.rs
