[package]
name = "linkanalyzer"
version = "0.1.2"
edition = "2021"
description = "Clio (LinkAnalyzer): recull, analitza i publica enllaços"

[[bin]]
name = "linkanalyzer"
path = "src/main.rs"

[features]
default = ["local-embed"]
# Embeddings in-process (fastembed + onnxruntime). Desactiva-ho per a un build
# més lleuger si només uses embeddings via HTTP (EMBED_PROVIDER apuntant a un servidor).
local-embed = ["dep:fastembed"]

[dependencies]
tokio = { version = "1", features = ["full"] }
fastembed = { version = "5", optional = true }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"

[profile.release]
opt-level = 2
